# u-dam

./: README.md  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
samples/basic/: __init__.py
samples/basic/tables/: no_create_table.py  users.py
samples/p001_basic/: __init__.py
samples/p001_basic/versions/: readme.md  v1_default.py  v2.py  v3_update_users.py  v4_non_update.py  v5_over_max.py
specs/database/: __init__.py
specs/database/error_invalid_params/: __init__.py
specs/database/error_no_params/: __init__.py
specs/database/error_no_tables/: __init__.py
specs/mock/database/: __init__.py  mock_connect_database.py
specs/mock/database/tables/: __init__.py  mock_table_1.py  mock_table_2.py
specs/unit/database/tables/: test_status.py
specs/unit/sqlite3/: test_init.py
specs/unit/sqlite3/database/tables/: test_status.py
specs/unit/sqlite3/skelton/: test_init.py
specs/unit/sqlite3/skelton/tables/: test_users.py
specs/unit/sqlite3/utils/: test_connection.py  test_create.py  test_migration.py  test_params.py  test_setup.py
specs/unit/utils/: test_create.py
u_dam/sqlite3/: __init__.py  init.py
u_dam/sqlite3/database/: __init__.py
u_dam/sqlite3/database/tables/: status.py
u_dam/sqlite3/skelton/: __init__.py
u_dam/sqlite3/utils/: connection.py  create.py  migration.py  params.py  setup.py  types.py
