[metadata]
name = u_dam
version = 0.0.1

[options]
package_dir =
    = u_dam
pakages = find:
install_requires =


[options.extras_require]
dev =
    pytest >=7.4.0, <8.0.0
    pytest-mock >=3.12.0, <4.0.0
    coverage >=7.4.0, <8.0.0
    pytest-cov >=4.1.0, <5.0.0

[tool:pytest]
addopts =
    --cov=u_dam
    --log-cli-level=DEBUG

[coverage:run]
branch = True

[coverage:report]
show_missing = True
